<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lang_support"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30dp"
        android:layout_marginTop="@dimen/very_large_margin"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail_address"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/very_large_margin"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/large_margin"
        />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sign_in_btn"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/large_margin"
        />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_btn"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginTop="@dimen/large_margin"
        />

</androidx.constraintlayout.widget.ConstraintLayout>