<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/medium_margin">

    <ImageView
        android:id="@+id/word_flag_pref"
        android:src="@mipmap/ic_launcher_round"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/foreign_flag_desc"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/word_pref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:text="@string/word_placeholder"
        android:textSize="18sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/word_flag_pref" />

    <ImageView
        android:id="@+id/equals"
        android:src="@drawable/arrow_forward_24"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="@dimen/medium_margin"
        android:contentDescription="@string/arrow"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/word_pref" />

    <TextView
        android:id="@+id/translation_pref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:paddingBottom="4dp"
        android:text="@string/word_placeholder"
        android:textSize="22sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/equals" />

    <TextView
        android:id="@+id/translation_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/very_small_margin"
        android:text="@string/translation_number"
        android:textSize="11sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/translation_pref"
        app:layout_constraintVertical_bias="0.75"/>

    <ImageButton
        android:id="@+id/star_button"
        android:src="@drawable/full_star_24"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/favourite_word_icon_desc"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1" />


</androidx.constraintlayout.widget.ConstraintLayout>