<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/section1frag"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:background="@color/lightPurple"
    tools:context=".activity.MainActivity"
    >

    <TextView
        android:id = "@+id/textFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word_already_searched_guess_you"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tryTranslate"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd = "@dimen/large_margin"
    />


    <EditText
        android:id = "@+id/tryTranslate"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tryButton"
        android:hint = "@string/insert_translation"

        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd = "@dimen/large_margin"
        android:layout_marginBottom="@dimen/large_margin"
        />

    <Button
        android:id = "@+id/tryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/try_"
        app:layout_constraintStart_toEndOf="@id/tryTranslate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginEnd = "@dimen/large_margin"
       />
</androidx.constraintlayout.widget.ConstraintLayout>