<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.StatsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/firstSectionStats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/LegendPieChartSection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3">

        <org.eazegraph.lib.charts.PieChart
            android:id="@+id/piechart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/large_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LegendPieChartSection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/firstSectionStats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1">

        <androidx.cardview.widget.CardView
            android:id="@+id/greenView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05">

            <View
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/green" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/greenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:text="@string/guessed_words"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/greenView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/RedView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.55">

            <View
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/red" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/blueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:text="@string/wrong_words"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/RedView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TextStatsSection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/LegendPieChartSection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/paroleCercate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/very_large_margin"
            android:layout_marginStart="@dimen/large_margin"
            android:text="@string/searched_words"
            android:textSize="25sp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/paroleIndovinate"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/paroleCercateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/very_large_margin"
            android:layout_marginStart="@dimen/large_margin"
            android:text="@string/one_hundred"
            android:textColor="@color/purple"
            android:textSize="25sp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/paroleIndovinateValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8" />

        <TextView
            android:id="@+id/paroleIndovinate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginStart="@dimen/large_margin"
            android:text="@string/guessed_words_stats"
            android:textSize="25sp"

            app:layout_constraintTop_toBottomOf="@id/paroleCercate"
            app:layout_constraintBottom_toTopOf="@id/paroleSbagliate"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/paroleIndovinateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginStart="@dimen/large_margin"
            android:text="@string/one_hundred"
            android:textSize="25sp"
            android:textColor="@color/green"

            app:layout_constraintTop_toBottomOf="@id/paroleCercateValue"
            app:layout_constraintBottom_toTopOf="@id/paroleSbagliateValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8" />

        <TextView
            android:id="@+id/paroleSbagliate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginStart="@dimen/large_margin"
            android:text="@string/wronged_words"
            android:textSize="25sp"

            app:layout_constraintTop_toBottomOf="@id/paroleIndovinate"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/paroleSbagliateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginStart="@dimen/large_margin"
            android:text="@string/one_hundred"
            android:textSize="25sp"
            android:textColor="@color/red"
            app:layout_constraintTop_toBottomOf="@id/paroleIndovinateValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>