<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/section1frag"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:background="@color/lightPurple"
    tools:context=".activity.MainActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleSectionAddMean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
    <TextView
        android:id = "@+id/textFragmentMeaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_meaning"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd = "@dimen/large_margin"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleSectionAddMean"
        android:background="@color/white"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/wordToAddMean"
        android:text="@string/addMeaningText"
        android:textColor="@color/gray"
        android:textStyle="italic"

        />

    <TextView
        android:id = "@+id/wordToAddMean"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/newMeaning"
        android:hint = "old word"
        android:textSize="20dp"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd = "@dimen/large_margin"
        android:layout_marginBottom="@dimen/large_margin"
        />

    <EditText
        android:id = "@+id/newMeaning"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintStart_toEndOf="@id/wordToAddMean"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint = "@string/new_meaning"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd = "@dimen/large_margin"
        android:layout_marginBottom="@dimen/large_margin"
        />

    <Button
        android:id = "@+id/exitMeaningButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addMeaningButton"
        app:layout_constraintTop_toBottomOf="@id/wordToAddMean"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginEnd = "@dimen/large_margin"
    />
    <Button
        android:id = "@+id/addMeaningButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/add_meaning"
        android:enabled="false"

        app:layout_constraintStart_toEndOf="@id/exitMeaningButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wordToAddMean"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginEnd = "@dimen/large_margin"
    />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>