<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:background="@color/lightPurple"
    tools:context=".activity.MainActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_title_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:id="@+id/add_word_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/large_margin"
            android:text="@string/add_word"
            android:textStyle="bold"
            android:textSize="20sp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_word_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_title_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="1" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/word_subsection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="1"
            android:background="@color/white"
            >

            <EditText
                android:id="@+id/add_word_edit"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginVertical="@dimen/small_margin"
                android:layout_marginHorizontal="@dimen/large_margin"
                android:hint="@string/add_word"
                android:inputType="text"
                android:autofillHints=""

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintHorizontal_bias="0" />

            <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:spinnerMode="dropdown"
                android:background="@drawable/rectangle"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/add_word_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/word_subsection"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="1"
            android:background="@color/white"
            >

            <EditText
                android:id="@+id/add_translation_edit"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginVertical="@dimen/small_margin"
                android:layout_marginHorizontal="@dimen/large_margin"
                android:autofillHints=""
                android:hint="@string/add_translation"
                android:inputType="text"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

            <ImageButton
                android:id="@+id/translate_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/purple"
                android:contentDescription="@string/translate"
                android:src="@drawable/translate_24"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/add_translation_edit"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_info_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_word_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        >

        <EditText
            android:id="@+id/add_info_edit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginVertical="@dimen/large_margin"
            android:layout_marginHorizontal="@dimen/very_large_margin"
            android:hint="@string/add_info"
            android:autofillHints=""
            android:inputType="text"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/add_info_section"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        >
        
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/large_margin"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:text = "@string/close"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/confirm_button" />
    
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/confirm"
        android:layout_marginVertical="@dimen/large_margin"
        android:layout_marginHorizontal="@dimen/large_margin"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    
</androidx.constraintlayout.widget.ConstraintLayout>